# xengineer-novel-to-script

./: .gitignore  .impeccable.md  DESIGN.md  README.md  package.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent_runtime/: __init__.py  chat_toolbox.py  events.py  recorder.py
backend/app/agents/: __init__.py  deps.py  screenplay_agent.py
backend/app/agents/prompts/: answer_novel_question.zh.md  build_book_index.zh.md  chat_tool_orchestration.zh.md  system.zh.md  (+12 more)
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  book_index.py  chapter_split.py  chat.py  screenplay.py  yaml_patch.py
backend/app/services/: __init__.py  book_index_service.py  chapter_split_inference_service.py  chapter_splitter.py  chat_agent_service.py  context_packer.py  context_prompt_builder.py  project_service.py  runtime_config_service.py  script_generation_service.py  script_service.py  token_counter.py  validation_service.py  yaml_patch_service.py
backend/app/storage/: __init__.py  project_store.py
backend/app/tools/: __init__.py  deepseek_smoke.py
backend/tests/: test_agent_runtime.py  test_book_index_and_harness.py  test_chapter_splitter.py  test_chat_agent_api.py  test_config.py  test_context_packer.py  test_context_prompt_builder.py  test_health.py  test_projects_api.py  test_runtime_config.py  test_screenplay_agent_runtime.py  test_script_lifecycle_api.py  test_token_counter.py  test_yaml_patch_service.py
(+114 files in other folders)
