[project]
name = "xengineer-novel-to-script-backend"
version = "0.1.0"
description = "FastAPI backend for the XEngineer AI novel-to-script tool."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi[standard]>=0.115.0",
  "greenlet>=3.0.0",
  "pydantic-ai>=0.0.55",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "socksio>=1.0.0",
  "sqlalchemy>=2.0.36",
  "tokenizers>=0.23.1",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pyright>=1.1.410",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["app", "tests"]
exclude = ["data", ".venv", ".pytest_cache", ".ruff_cache"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
